Fix SHA label alignment for inline environment

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -937,6 +937,7 @@ a.ui.card:hover,
     padding: 6px 10px 4px;
     font-weight: normal;
     margin: 0 6px;
+    vertical-align: .5px;
   }
 
   .button.truncate {
